--- a/doc/developer-reference/apps/application.ini
+++ b/doc/developer-reference/apps/application.ini
@@ -30,7 +30,7 @@ LongDescription=Lorem ipsum dolor sit amet, consetetur sadipscing
 Screenshot=application_screenshot.jpg
 
 # applicable category
-Categories=System
+Categories=System services
 
 # website for more information about the product (e.g. landing page)
 Website=http://www.software.com/products/application/welcome
