--- a/doc/errata/staging/2013-12-10-univention-lib.yaml
+++ b/doc/errata/staging/2013-12-10-univention-lib.yaml
@@ -2,13 +2,17 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-lib
-fix: 3.0.26-9.203.201312111519
+fix: 3.0.26-11.205.201401081823
 note:
 version: [0]
 desc: |
   This errata update fixes several issues:
+  * adjust the behaviour of ucs_registerLDAPExtension, to let
+    join scripts continue in case an LDAP extension could not
+    be registered because a newer one is already active in the
+    domain.
   * Group name mapping has been added to univention-lib. 
     The new function "custom_groupname" maps the default group names
     to the actual name.
   * A new pyhton lib "s4" has been added for samba4 related stuff.
-bug: [33649,33710]
+bug: [33582,33649,33710]
