--- a/base/univention-updater/debian/control
+++ b/base/univention-updater/debian/control
@@ -14,6 +14,7 @@ Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
  univention-config-registry,
  univention-directory-policy,
+ univention-policy-tools,
  netcat,
  wget,
  apt-mirror,
