--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -12,7 +12,7 @@ Package: python-univention-lib
 Architecture: all
 Depends: ${python:Depends},
  ${misc:Depends},
- python-univention-config-registry (>= 9.0.5-2.443.201312091553),
+ python-univention-config-registry (>= 9.0.5-4),
  pwgen,
  python-magic
 Provides: ${python:Provides}
@@ -28,7 +28,7 @@ Description: UCS - common scripting functions for Python scripts
 Package: shell-univention-lib
 Architecture: all
 Depends: ${misc:Depends},
- python-univention-config-registry (>= 9.0.5-2.443.201312091553),
+ python-univention-config-registry (>= 9.0.5-4),
  python-univention-lib (= ${binary:Version}),
  pwgen
 Description: UCS - common scripting functions for shell scripts
