--- a/services/univention-s4-connector/debian/control
+++ b/services/univention-s4-connector/debian/control
@@ -31,7 +31,7 @@ Package: univention-s4-connector
 Architecture: all
 Depends: ${misc:Depends},
  python-univention-connector-s4 (= ${binary:Version}),
- shell-univention-lib (>= 1.0.6),
+ shell-univention-lib (>= 3.0.26-14),
  python-univention-lib (>= 3.0.26-7),
  samba4-clients,
  univention-samba4 (>= 2.0.44-3),
