univention-base-files (2.0.15-5) unstable; urgency=low
  * Add ntp/noquery (Bug #33833)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47015 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/conffiles/etc/ntp.conf
+++ b/base/univention-base-files/conffiles/etc/ntp.conf
@@ -30,7 +30,17 @@ if timeserver != 'local':
 
 if configRegistry.is_true('ntp/signed'):
 	print 'ntpsigndsocket /var/lib/samba/ntp_signd'
-	print 'restrict default mssntp'
+	if configRegistry.is_true('ntp/noquery'):
+		print 'restrict default mssntp noquery'
+		print 'restrict 127.0.0.1'
+		print 'restrict ::1'
+	else:
+		print 'restrict default mssntp'
+else:
+	if configRegistry.is_true('ntp/noquery'):
+		print 'restrict default noquery'
+		print 'restrict 127.0.0.1'
+		print 'restrict ::1'
 print 'tinker panic %s' % configRegistry.get('ntp/tinker/panic', '0')
 @!@
 
