increase default nofile limit to 8192 (Bug #32415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47033 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -43,7 +43,12 @@ for key in configRegistry.keys():
 	# TODO: What about '"' in name?
 	if ' ' in name or '\t' in name:
 		name = '"%s"' % name
-	output.append( ('%s%s' % (scope, name, ), type, item, configRegistry[key], ) )
+	if name == 'default':
+		name = '*'
+		scope = ''
+		output.insert(1, ('%s%s' % (scope, name, ), type, item, configRegistry[key], ))
+	else:
+		output.append( ('%s%s' % (scope, name, ), type, item, configRegistry[key], ) )
 
 lengths = [0, 0, 0, 0, ]
 for entry in output:
