--- a/doc/errata/staging/2013-12-09-univention-pam.yaml
+++ b/doc/errata/staging/2013-12-09-univention-pam.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-pam
-fix: 7.0.4-7.228.201312130854
+fix: 7.0.4-8.229.201401101144
 note:
 version: [0]
 desc: |
@@ -12,4 +12,10 @@ desc: |
   * The listener module group-name-mapping.py has been added to 
     automatically set group name mapping UCR variables 
     (groups/default/.*) if well known groups are renamed.
-bug: [33650, 33710]
+  * The default limit for "max open files" (nofile) in 
+    /etc/security/limits.conf has been increased to "8192".
+    This value can be changed by setting the ucr variables
+    "security/limits/user/default/soft/nofile" and
+    "security/limits/user/default/hard/nofile".
+    
+bug: [33650, 33710, 32415]
