* Updated for Bug #33881
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47097 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-08-univention-samba4.yaml
+++ b/doc/errata/staging/2014-01-08-univention-samba4.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-samba4
-fix: 3.0.39-13.568.201401101147
+fix: 3.0.39-15.570.201401131822
 note:
 version: [0]
 desc: |
@@ -15,4 +15,6 @@ desc: |
   * ldapsearch-wrapper has been added to univention-ldapsearch calls
     in samba4 related setup scripts to prevent line wrapping of 
     search results.
-bug: [33250, 33529, 33583]
+  * Joining an additional Samba DC could overwrite changes made to
+    the default domain GPO and domain controller GPO.
+bug: [33250, 33529, 33583, 33881]
