* Updated for Bug #31731
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47136 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
+++ b/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
@@ -2,13 +2,14 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-s4-connector
-fix: 8.0.33-13.439.201401141631
+fix: 8.0.33-14.440.201401141728
 note:
 version: [0]
 desc: |
   This errata update fixes two issues:
+  * The handling of DNS timeouts has been improved in univention-ad-takeover
   * The sync mode is now configurable for every connector property such
     as users, groups, containers etc. through UCR.
   * fix a problem in the handling of non-english user and group names in
     univention-ad-takeover.
-bug: [33711, 33644]
+bug: [31731, 33711, 33644]
