* consider user name localization in templates (Bug #33650)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47138 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/access-kde.conf
+++ b/base/univention-pam/conffiles/etc/security/access-kde.conf
@@ -7,8 +7,12 @@ for item in configRegistry.keys():
 	if item.startswith("auth/" + scope + "/") and configRegistry.is_true(item, False):
 		tmp = item.split("/")
 		if len(tmp) >= 4:
-			names[configRegistry.groupNameMapping(tmp[3])] = 1
+			if tmp[2] == "group":
+				names[configRegistry.groupNameMapping(tmp[3])] = 1
+			elif tmp[2] == "user":
+				names[configRegistry.userNameMapping(tmp[3])] = 1
 
 print "+:" + ",".join(names.keys()) + ":ALL"
+names = []
 print "-:ALL:ALL"
 @!@
