--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -27,6 +27,7 @@ for key in configRegistry.keys():
 	(scope, name, type, item, ) = parts
 	if scope == 'user':
 		scope = ''
+		name = configRegistry.userNameMapping(name)
 	elif scope == 'group':
 		scope = '@'
 		name = configRegistry.groupNameMapping(name)
