--- a/nagios/univention-nagios/conffiles/etc/security/access-nagios.conf
+++ b/nagios/univention-nagios/conffiles/etc/security/access-nagios.conf
@@ -7,7 +7,9 @@ for item in configRegistry.keys():
 	if item.startswith("auth/" + scope + "/") and configRegistry.is_true(item, False):
 		tmp = item.split("/")
 		if len(tmp) >= 4:
-			names[configRegistry.groupNameMapping(tmp[3])] = 1
+				names[configRegistry.groupNameMapping(tmp[3])] = 1
+			elif tmp[2] == "user":
+				names[configRegistry.userNameMapping(tmp[3])] = 1
 
 print "+:" + ",".join(names.keys()) + ":ALL"
 print "-:ALL:ALL"
