--- a/doc/errata/staging/2014-01-08-univention-nagios.yaml
+++ b/doc/errata/staging/2014-01-08-univention-nagios.yaml
@@ -2,10 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-nagios
-fix: 7.0.5-4.257.201401081114
+fix: 7.0.5-5.258.201401141824
 note:
 version: [0]
 desc: |
-  Shell quoting has been fixed in the join scripts 
-  28univention-nagios-server.inst and 30univention-nagios-client.inst.
-bug: [33593]
+  * Shell quoting has been fixed in the join scripts 
+    28univention-nagios-server.inst and 30univention-nagios-client.inst.
+  * Support for customization of standard user and group names has been added.
+bug: [33593, 33646]
