Bug #33924: Revert Kernel Multi-Arch ABI breakage
Also fix name to be YYYY-MM-DD.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47147 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-14-linux.yaml
+++ b/doc/errata/staging/2014-01-14-linux.yaml
@@ -34,6 +34,11 @@ desc: |
  * Race conditions in IPC handling (CVE-2013-7026)
  * Various memory leaks in socket handling (CVE-2013-7263, CVE-2013-7264, CVE-2013-7265, CVE-2013-7281)
  * Various memory leaks in socket handling (CVE-2013-7266, CVE-2013-7267, CVE-2013-7268, CVE-2013-7269, CVE-2013-7270, CVE-2013-7271)
+
+ This kernel also fixes an ABI breakage: The kernel update to linux-3.10 for
+ UCS-3.2 caused the header files to move from /usr/include/adm/ to the
+ different location /ucr/include/gnu-*-linux/asm/, which broke compiling other
+ software. The change was reverted.
 cve:
  - CVE-2013-2147
  - CVE-2013-4343
@@ -70,3 +75,5 @@ cve:
  - CVE-2013-7269
  - CVE-2013-7270
  - CVE-2013-7271
+bug:
+ - 33924
