* user custom_username and custom_groupname (Bug #33650)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47158 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/access-screen.conf
+++ b/base/univention-pam/conffiles/etc/security/access-screen.conf
@@ -1,6 +1,8 @@
 @%@UCRWARNING=# @%@
 
 @!@
+from univention.lib.misc import custom_username, custom_groupname
+
 scope = "screen"
 names = {}
 for item in configRegistry.keys():
@@ -8,9 +10,9 @@ for item in configRegistry.keys():
 		tmp = item.split("/")
 		if len(tmp) >= 4:
 			if tmp[2] == "group":
-				names[configRegistry.groupNameMapping(tmp[3])] = 1
+				names[custom_groupname(tmp[3])] = 1
 			elif tmp[2] == "user":
-				names[configRegistry.userNameMapping(tmp[3])] = 1
+				names[custom_username(tmp[3])] = 1
 
 print "+:" + ",".join(names.keys()) + ":ALL"
 print "-:ALL:ALL"
