--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -15,6 +15,8 @@
 # $ man 5 limits.conf
 
 @!@
+from univention.lib.misc import custom_username, custom_groupname
+
 PREFIX = 'security/limits/'
 output = [ ('# <domain>', '<type>', '<item>', '<value>', ) ]
 for key in configRegistry.keys():
@@ -27,10 +29,10 @@ for key in configRegistry.keys():
 	(scope, name, type, item, ) = parts
 	if scope == 'user':
 		scope = ''
-		name = configRegistry.userNameMapping(name)
+		name = custom_username(name)
 	elif scope == 'group':
 		scope = '@'
-		name = configRegistry.groupNameMapping(name)
+		name = custom_groupname(name)
 	else:
 		print '# Illegal variable "%s"\n# <scope> must be "user" or "group", not "%s"\n#' % (key, type, )
 		continue
