--- a/base/univention-pam/debian/control
+++ b/base/univention-pam/debian/control
@@ -19,7 +19,7 @@ Depends: ${misc:Depends},
  nscd,
  univention-home-mounter,
  shell-univention-lib (>= 3.0.26-7.202.201312111504),
- python-univention-lib (>= 3.0.26-9.203.201312111519),
+ python-univention-lib (>= 3.0.26-14),
  libnss-extrausers
 Description: UCS - login configuration
  This package contains the configuration for the pluggable
