--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -46,7 +46,7 @@ for key in configRegistry.keys():
 	# TODO: What about '"' in name?
 	if ' ' in name or '\t' in name:
 		name = '"%s"' % name
-	if name == 'default':
+	if name == '.*':
 		name = '*'
 		scope = ''
 		output.insert(1, ('%s%s' % (scope, name, ), type, item, configRegistry[key], ))
