Bug #33258: UCSS: multiple IP in same subnet
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47182 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-15-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-01-15-univention-system-setup.yaml
@@ -2,11 +2,15 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-system-setup
-fix: 7.0.69-1.562.201401161201
+fix: 7.0.69-2.563.201401161212
 note:
 version: [0]
 desc: |
   This errata update fixes several issues:
   * Adding multiple IP addresses to one network interface has been fixed.
   * The summary of the network interface changes is more detailful now.
-bug: [32996, 33407]
+  * Multiple IP addresses belonging to the same sub-network are now correctly registered in LDAP.
+bug:
+ - 33258
+ - 32996
+ - 33407
