* Update for Bug #33937
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47189 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-12-19-univention-ldap.yaml
+++ b/doc/errata/staging/2013-12-19-univention-ldap.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-ldap
-fix: 10.0.17-14.655.201401141646
+fix: 10.0.17-15.656.201401161436
 note:
 version: [0]
 desc: |
@@ -14,4 +14,5 @@ desc: |
   * The LDAP ACLs now support the configuration of a
     custom Administrator name via the new UCR variable family
     "users/default/.*".
-bug: [33430, 33704, 33890]
+  * New schema extension for MS WMI filters
+bug: [33430, 33704, 33890, 33937]
