--- a/doc/errata/staging/2013-12-13-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2013-12-13-univention-management-console-module-udm.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-module-udm
-fix: 4.0.97-15.431.201401101635
+fix: 4.0.97-16.432.201401171428
 note:
 version: [0]
 desc: |
@@ -11,4 +11,6 @@ desc: |
     "Policies" tab of LDAP objects. Fixed that.
   * A user's empty mail server was overwritten with the first non-emtpy one
     even for existing users. Fixed that.
-bug: [33004, 33329]
+  * A typo in the german translation has been fixed.
+  * After adding a new standard container the container was not selectable as position for new objects. Fixed that.
+bug: [33004, 33329, 33554, 33651]
