--- a/doc/errata/staging/2014-01-14-xen-4.1.yaml
+++ b/doc/errata/staging/2014-01-14-xen-4.1.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: xen-4.1
-fix: 
+fix: 4.1.3-14.39.201401192234
 note:
 version: [0]
 desc: |
