--- a/doc/errata/staging/2014-01-14-xen-4.1.yaml
+++ b/doc/errata/staging/2014-01-14-xen-4.1.yaml
@@ -6,8 +6,7 @@ fix: 4.1.3-14.39.201401192234
 note:
 version: [0]
 desc: |
- The Xen package has been updated. This provides a wide range of bugfixes and
- fixes the following security vulnerabilities:
+ The Xen package has been updated. This fixes the following security vulnerabilities:
  * Information leak on AVX and/or LWP capable CPUs (CVE-2013-1442)
  * Lock order reversal between page_alloc_lock and mm_rwlock (CVE-2013-4553)
  * Information leaks through I/O instruction emulation (CVE-2013-4355)
