--- a/doc/errata/staging/2014-01-20-hplip.yaml
+++ b/doc/errata/staging/2014-01-20-hplip.yaml
@@ -6,7 +6,7 @@ fix: 3.10.6-2.21.201401171710
 note:
 version: [0]
 desc: |
- Multiple security issues have been discovered in HP Linux Printing and Imaging System (HPLIP)
+ Multiple security issues have been discovered in the HP Linux Printing and Imaging System (HPLIP)
  * hplip handles temporary files insecurely in several code paths (CVE-2013-0200)
  * Insecure use of DBUS interface allows the bypass of Policykit restrictions (CVE-2013-4325)
  * Insecure temporary file handling in pkit.py (CVE-2013-6402)
