--- a/doc/errata/staging/2014-01-08-univention-samba4.yaml
+++ b/doc/errata/staging/2014-01-08-univention-samba4.yaml
@@ -7,14 +7,6 @@ note:
 version: [0]
 desc: |
   This errata update fixes several issues:
-  * Samba4 could not be started on hosts with only IPv6 interfaces.
-    This has been fixed by deactivating WINS support on IPv6 hosts.
-  * Multiple logrotate configurations for samba log files could lead 
-    to warning messages via cron. These redundant configurations are
-    removed with this update.
-  * ldapsearch-wrapper has been added to univention-ldapsearch calls
-    in samba4 related setup scripts to prevent line wrapping of 
-    search results.
   * Joining an additional Samba DC could overwrite changes made to
     the default domain GPO and domain controller GPO.
-bug: [33250, 33529, 33583, 33881]
+bug: [33881]
