--- a/doc/errata/staging/2013-12-18-univention-samba.yaml
+++ b/doc/errata/staging/2013-12-18-univention-samba.yaml
@@ -7,10 +7,10 @@ note:
 version: [0]
 desc: |
   This update fixes a bug in the configuration file parsing of the
-  UCS 3.2-0 Samba winbind daemon, which caused trust relations to
+  UCS 3.2 Samba winbind daemon, which caused trust relations to
   Windows Active Directory domains to fail (direction: UCS Samba
   NT domain trusts Windows AD domain).
   Now there is a new UCR variable samba/winbind/rpc/only.
-  In UCS 3.2-0 Samba NT domains this needs to be set to "yes" to make
-  trusts relations to Windows AD domains work.
+  In UCS 3.2 Samba NT domains this needs to be set to "yes" to allow
+  trusts relations to Microsoft Windows AD domains.
 bug: [33303]
