--- a/doc/developer-reference/apps/application.ini
+++ b/doc/developer-reference/apps/application.ini
@@ -35,15 +35,20 @@ Categories=System services
 # website for more information about the product (e.g. landing page)
 Website=http://www.software.com/products/application/welcome
 
+# website for getting support (or information about how to buy a license)
+SupportURL=http://www.software.com/products/application/buy
+
 # display name of the vendor
 Vendor=Software GmbH
 
 # contact address for the customer
 Contact=sales@software.com
 
-# email address that should be used to send notifications. 
+# email address that should be used to send notifications.
 # If none is provided the address from "Contact" will be used
-NotificationEmail=
+# Note: An empty email (NotificationEmail=) is not valid! Remove the line (or
+# put in comments) in this case
+NotificationEmail=appcenter@software.com
 
 # optional: website of the vendor for more information
 WebsiteVendor=http://www.software.com/
@@ -63,6 +68,11 @@ WebInterface=/application-webinterface
 # optional: A dedicated name for the web interface may be given.
 # If not, Name is taken
 WebInterfaceName=Web interface of The Application
+
+# WebInterface will be added to UCS startsite.
+# Possible values: services, admin, False. If not given "services" is used.
+# Only useful when a WebInterface is defined
+UCSOverviewCategory=admin
 
 # The minimal amount of memory in MB. This value is compared with the
 # currently available memory (without Swap) when trying to install the
