* Fix access-nagios.conf (Bug #33646)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47314 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/conffiles/etc/security/access-nagios.conf
+++ b/nagios/univention-nagios/conffiles/etc/security/access-nagios.conf
@@ -9,6 +9,7 @@ for item in configRegistry.keys():
 	if item.startswith("auth/" + scope + "/") and configRegistry.is_true(item, False):
 		tmp = item.split("/")
 		if len(tmp) >= 4:
+			if tmp[2] == "group":
 				names[custom_groupname(tmp[3])] = 1
 			elif tmp[2] == "user":
 				names[custom_username(tmp[3])] = 1
