Bug #33587: noVNC: work-around Firefox security excetion
Serve novnc_auto.html file through the same TCP port 6080 as the
WebSocket protocol through websockify. Otherwise the use won't get the
Firefox dialog to confirm the second exception for that port and wss://
will fail without an user visible error message.

For the errata do a rewrite from http://*:80/univention-novnc/ and
https://*:443/univention-novnc/ to http(s)://:6080/, since the URL is
hard-coded in UVMM-UMC.

Also update the protocol to detect BinaryData support in WebSocket.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47330 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-novnc/univention-novnc.conf
+++ b/virtualization/univention-novnc/univention-novnc.conf
@@ -1,10 +1,7 @@
 <IfModule alias_module>
-	Alias /univention-novnc /usr/share/novnc
-	<Directory /usr/share/novnc>
-		DirectoryIndex vnc.html
-		Options -Indexes
-		AllowOverride None
-		Order allow,deny
-		Allow from all
-	</Directory>
+	RewriteEngine On
+	RewriteCond %{HTTPS} !=on
+	RewriteRule ^/univention-novnc/?(.*) http://%{SERVER_NAME}:6080/$1 [R,L]
+	RewriteCond %{HTTPS} =on
+	RewriteRule ^/univention-novnc/?(.*) https://%{SERVER_NAME}:6080/$1 [R,L]
 </IfModule>
