Bug #33587: noVNC: work-around Firefox security exception
Serve novnc_auto.html file through the same TCP port 6080 as the
WebSocket protocol through websockify. Otherwise the use won't get the
Firefox dialog to confirm the second exception for that port and wss://
will fail without an user visible error message.

For the errata do a rewrite from http://*:80/univention-novnc/ and
https://*:443/univention-novnc/ to http(s)://:6080/, since the URL is
hard-coded in UVMM-UMC.

Also update the protocol to detect BinaryData support in WebSocket.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47331 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-21-univention-novnc.yaml
+++ b/doc/errata/staging/2014-01-21-univention-novnc.yaml
@@ -2,11 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-novnc
-fix: 0.4+0+20131014+git142aa45-2.3.201401211307
+fix: 0.4+0+20131014+git142aa45-3.4.201401212016
 note:
 version: [0]
 desc: |
-  noVNC was changed to use the secured protocol wss:// when checking the
-  browser for WebSocket support, as newer Firefox versions block the unsecured
-  protocol ws:// when the Browser connection uses secured https://.
+  The noVNC service is now served fully on TCP port 6080, as newer Firefox
+  browsers had problems accessing the service through https://.
 bug: [33587]
