Bug #33741: UVMM: Fix check-script to restart UVMMd
r36268 renamed univention-virtual-machine-manager-node-common back to
libvirtd and accidentally also changed uvmmd into libvirtd.

Revert that change so that uvmmd-check.sh again restarts UVMMd instead
of libvirtd.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47340 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-20-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-01-20-univention-virtual-machine-manager-daemon.yaml
@@ -2,10 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-virtual-machine-manager-daemon
-fix: 3.0.17-2.481.201401201652
+fix: 3.0.17-3.482.201401221005
 note:
 version: [0]
 desc: |
-  A VNC connection initiated from the Univention Directory Manager module 
-  can now be used immediately after the start of the virtual machine.
-bug: [33166]
+  This erratum update fixes several issues:
+  * A VNC connection initiated from the Univention Directory Manager module
+    can now be used immediately after the start of the virtual machine.
+  * The automatic check script again restarts UVMMd in case the daemon is
+    no longer responding to the cyclic liveness check.
+bug: [33166,33741]
