--- a/doc/errata/staging/2014-01-20-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-01-20-univention-virtual-machine-manager-daemon.yaml
@@ -7,8 +7,8 @@ note:
 version: [0]
 desc: |
   This erratum update fixes several issues:
-  * A VNC connection initiated from the Univention Directory Manager module
+  * A VNC connection initiated from Univention Virtual Machine Manager
     can now be used immediately after the start of the virtual machine.
-  * The automatic check script again restarts UVMMd in case the daemon is
+  * The automatic check script now restarts UVMMd in case the daemon is
     no longer responding to the cyclic liveness check.
 bug: [33166,33741]
