* use security/limits/default/user/ instead of security/limits/user/.*/   (Bug #32415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47352 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -33,8 +33,15 @@ for key in configRegistry.keys():
 	elif scope == 'group':
 		scope = '@'
 		name = custom_groupname(name)
+	elif scope == 'default':
+		if name == 'user':
+			name = '*'
+			scope = ''
+		if name == 'group':
+			print '# Invalid variable "%s"\n# <name> must be "user" for "default" <scope>, not "%s"\n#' % (key, type, )
+			continue
 	else:
-		print '# Illegal variable "%s"\n# <scope> must be "user" or "group", not "%s"\n#' % (key, type, )
+		print '# Illegal variable "%s"\n# <scope> must be "user", "group" or "default", not "%s"\n#' % (key, type, )
 		continue
 	if not type in ('soft', 'hard', '-'):
 		print '# Illegal variable "%s"\n# <type> must be "soft", "hard" or "-", not "%s"\n#' % (key, type,)
@@ -46,12 +53,7 @@ for key in configRegistry.keys():
 	# TODO: What about '"' in name?
 	if ' ' in name or '\t' in name:
 		name = '"%s"' % name
-	if name == '.*':
-		name = '*'
-		scope = ''
-		output.insert(1, ('%s%s' % (scope, name, ), type, item, configRegistry[key], ))
-	else:
-		output.append( ('%s%s' % (scope, name, ), type, item, configRegistry[key], ) )
+	output.append( ('%s%s' % (scope, name, ), type, item, configRegistry[key], ) )
 
 lengths = [0, 0, 0, 0, ]
 for entry in output:
