--- a/doc/errata/staging/2014-01-15-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-01-15-univention-system-setup.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-system-setup
-fix: 7.0.69-4.565.201401201540
+fix: 7.0.69-5.566.201401230804
 note:
 version: [0]
 desc: |
@@ -10,7 +10,9 @@ desc: |
   * Adding multiple IP addresses to one network interface has been fixed.
   * The summary of the network interface changes is more detailful now.
   * Multiple IP addresses belonging to the same sub-network are now correctly registered in LDAP.
+  * The german translation of "next" has been changed to "Weiter".
 bug:
  - 33258
  - 32996
  - 33407
+ - 33976
