--- a/doc/errata/staging/2013-12-13-univention-management-console.yaml
+++ b/doc/errata/staging/2013-12-13-univention-management-console.yaml
@@ -6,5 +6,6 @@ fix: 6.0.24-1.774.201401140936
 note:
 version: [0]
 desc: |
- This erratum improves the error handling of UMC module. A feedback is send to the client when the initializing of a module failed.
+ This erratum improves the error handling of UMC modules. A feedback is sent to
+ the client when the initializing of a module failed.
 bug: [33673]
